# FiadoApp

./: .env.example  .gitattributes  .gitignore  FLUJO_VERIFICACION.md  README.md  _test_cloud.py  _test_retention_toggle.py  backend_server.py  fiadoapp-debug.spec  fiadoapp-windowed.spec  fiadoapp.spec  requirements.txt
.atl/: skill-registry.md
config/: settings.py  urls.py
coreApp/: admin.py  backup_utils.py  models.py  pagination.py  serializers.py  supabase_utils.py  throttles.py  urls.py  views.py
coreApp/fixtures/: initial_data.json
coreApp/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_fix_empty_barcodes.py  0004_sale_cash_received_sale_change_given.py  0005_expense.py  0006_cashclosure.py  0007_backupconfig.py  0008_backupconfig_installation_uuid_and_more.py  0009_saleitem_cost_at_sale.py  0010_backfill_cost_at_sale.py  0011_storeconfig.py
coreApp/tests/: test_auth.py  test_cash_closure.py  test_expenses.py  test_imports.py  test_products.py  test_reports.py  test_sales.py
coreApp/views/: __init__.py  auth.py  backup.py  cash_closure.py  categories.py  clients.py  dashboard.py  expenses.py  exports.py  health.py  helpers.py  import_helpers.py  imports.py  payments.py  products.py  reports.py  sales.py  search.py  store_config.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build-tauri.ps1
(+157 files in other folders)
