[package]
name = "fiadoapp"
version = "0.1.0"
description = "FiadoApp — Sistema POS para tiendas de barrio"
authors = ["Oscar"]
edition = "2021"

[lib]
name = "fiadoapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
